--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,12 +2,28 @@ nav {
   align-items: center;
   box-shadow: 0 4px 6px -6px rgb(56, 56, 56);
   background-color: var(--element);
-  margin-bottom: 2em;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   height: 100px;
   .flexnav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &-burger {
+      margin-right: 1em;
+      margin-bottom: 5px;
+      cursor: pointer;
+      display: none;
+    }
+    &-logo {
+      margin-bottom: 8px;
+    }
+    &-sidebar {
+      &-close {
+        display: none;
+      }
+    }
     a {
       text-decoration: none;
       display: inline-block;
@@ -26,7 +42,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
-    position:relative;
+    position: relative;
     &Avatar {
       width: 55px;
       margin-left: 2em;
@@ -39,22 +55,46 @@ nav {
         border: 2px solid var(--orange);
       }
     }
-    &-cart{
-        top:90px;
-        right:-50px;
-        position:absolute;
-        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-        border-radius:10px;
-        width:300px;
-        height:180px;
-        h2{
-            padding:1em;
-            display:block;
-            font-size:18px;
-            line-height:10px;
-            color:var(--dark-blue);
-            border-bottom:1px solid var(--light-grayish);
+  }
+}
+
+.close {
+  display: none;
+}
+
+@media screen and (max-width: 720px) {
+  nav {
+    .flexnav {
+      a {
+        display: none;
+      }
+      &-burger {
+        display: block;
+      }
+      &-sidebar {
+        &-close {
+          display: block;
+          cursor: pointer;
+          position: absolute;
+          top: 24px;
+          left: 50px;
         }
+        padding: 4em;
+        height: 100vh;
+        background-color: #fff;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 100;
+        color: #000;
+        padding-left: 20px;
+        & a {
+          display: flex;
+          flex-direction: column;
+          line-height: 50px;
+          color: var(--dark-blue);
+        }
+      }
     }
   }
 }
