--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   --white: hsl(0, 0%, 100%);
   --orange: hsl(26, 100%, 55%);
   --pale-orange: hsl(25, 100%, 94%);
-  --black: hsl(0, 0%, 0%);
+  --black: hsl(0, 0%, 0%, 0.75);
 }
 
 body {
