--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -10,6 +10,9 @@
   right: -40px;
   margin-top: 1em;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  p {
+    text-align: center;
+  }
   & h2 {
     padding: 1em;
     display: block;
@@ -47,6 +50,7 @@
     display: flex;
     &-txt {
       display: flex;
+      min-width: 170px;
       flex-direction: column;
     }
     &-delete {
@@ -63,5 +67,13 @@
     width: 90%;
     margin-right: 4em;
     height: 300px;
+    &-container {
+      &-txt {
+        width: 63%;
+      }
+      &-delete {
+        margin-left: 0;
+      }
+    }
   }
 }
